--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uniway</title>
 
-    <!-- ✅ Google Fonts - Assistant -->
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- ✅ פונט Assistant -->
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;600;700&display=swap" rel="stylesheet" />
+
+    <!-- ✅ אייקונים Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha512-wsVY2onJmNY+8hLKk+2Mdj9KfMZBu4x0wLOm0yZoSYD1eN6EqqJQTRf+eOJz8vYVvI4FzXolcGmKrVtZ9Z4Xmw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- ✅ צבע רקע ברירת מחדל מידי -->
+    <style>
+      html,
+      body {
+        background-color: #f6f8fa;
+        margin: 0;
+        padding: 0;
+        direction: rtl;
+        font-family: 'Assistant', sans-serif;
+      }
+
+      #root {
+        min-height: 100vh;
+        background-color: #f6f8fa;
+      }
+    </style>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
